# hreq

./: .gitignore  .stylish-haskell.yaml  .travis.yml  CHANGELOG.md  README.md  cabal.project  hreq-readme.cabal  hreq.cabal
example/: Main.hs
hreq/: README.lhs  README.md  hreq.cabal
hreq-client/: CHANGELOG.md  README.md  hreq-client.cabal
hreq-client/example/: Main.hs
hreq-client/src/Hreq/: Client.hs
hreq-client/src/Hreq/Client/Internal/: Config.hs  HTTP.hs
hreq-client/test/Hreq/HttpBin/: SuccessSpec.hs
hreq-client/test/Hreq/Pure/: FailSpec.hs  SuccessSpec.hs  Util.hs
hreq-conduit/: CHANGELOG.md  README.md  hreq-conduit.cabal
hreq-conduit/src/Hreq/: Conduit.hs
hreq-conduit/src/Hreq/Conduit/Internal/: HTTP.hs  StreamBody.hs
hreq-conduit/test/Hreq/Client/Conduit/: FailSpec.hs  SuccessSpec.hs
hreq-conduit/test/Hreq/HttpBin/: SuccessSpec.hs
hreq-core/: CHANGELOG.md  LICENSE.md  README.md  hreq-core.cabal
hreq-core/src/Data/: Hlist.hs  Singletons.hs
hreq-core/src/Hreq/Core/: API.hs  Client.hs  Http.hs
hreq-core/src/Hreq/Core/API/: Internal.hs  MediaType.hs  Request.hs  Response.hs  Streaming.hs  TypeLevel.hs  Verb.hs
hreq-core/src/Hreq/Core/Client/: BaseUrl.hs  BasicAuth.hs  ClientError.hs  HasClient.hs  HasRequest.hs  HasResponse.hs  Internal.hs  Request.hs  Response.hs  RunClient.hs
hreq-core/src/Hreq/Core/Http/: BaseUrl.hs  BasicAuth.hs  HasHttp.hs  HasRequest.hs  HasResponse.hs  HttpError.hs  Request.hs  Response.hs  RunHttp.hs
hreq-core/src/Network/Core/: Http.hs
hreq-core/src/Network/Core/API/: Internal.hs  MediaType.hs  Response.hs  Verb.hs
hreq-core/src/Network/Core/Http/: BasicAuth.hs  HasRequest.hs  HasResponse.hs  HttpError.hs  Request.hs  Response.hs
hreq-core/test/: DocTests.hs
hreq/example/: Main.hs
hreq/src/Hreq/: Client.hs
hreq/src/Hreq/Client/Internal/: Config.hs  HTTP.hs
hreq/src/Network/HTTP/Hreq/: Config.hs  Internal.hs
hreq/test/Hreq/: FailSpec.hs  SuccessSpec.hs  Util.hs
src/Data/: Hlist.hs  Singletons.hs
src/Network/Core/: API.hs  Http.hs
src/Network/Core/API/: Internal.hs  MediaType.hs  Request.hs  Response.hs  TypeLevel.hs  Types.hs  Verb.hs  Verbs.hs
src/Network/Core/Http/: BaseUrl.hs  BasicAuth.hs  HasHttp.hs  HasRequest.hs  HasResponse.hs  Hlist.hs  HttpError.hs  Request.hs  Response.hs  RunHttp.hs
src/Network/HTTP/: HReq.hs  Hreq.hs
src/Network/HTTP/Hreq/: Config.hs  Internal.hs
test/Hreq/: FailSpec.hs  SuccessSpec.hs
