cabal-version: >= 2.0
name:           hreq-readme
version:        0.0.1.0
synopsis:       Tests Hreq's readme file.
description:    Tests Hreq's readme file.
homepage:       https://github.com/epicallan/hreq.git#readme
bug-reports:    https://github.com/epicallan/hreq.git/issues
author:         Lukwago Allan <epicallan.al@gmail>
maintainer:     Lukwago Allan <epicallan.al@gmail>
copyright:      2019 Lukwago Allan
tested-with:
   GHC  ==8.2.2
    ||  ==8.4.4
    ||  ==8.6.5
    ||  ==8.8.1
build-type: Simple

source-repository head
  type: git
  location: https://github.com/epicallan/hreq.git

test-suite readme
  build-depends:
      base  >= 4.10.1 && < 5
    , aeson >= 1.4.5 && < 1.5
    , hreq  >= 0.0.1
  main-is:             README.lhs
  type:                exitcode-stdio-1.0
  ghc-options:         -pgmL markdown-unlit -Wall -threaded
  build-tool-depends:  markdown-unlit:markdown-unlit
  default-language:    Haskell2010
