cabal-version: >= 2.0
name:           hreq
version:        0.0.0.1
synopsis:       A type dependent highlevel http request library inspired by servant-client.
description:    A type dependent highlevel http request library inspired by servant-client.
category:       Network, Web
homepage:       https://github.com/epicallan/hreq.git#readme
bug-reports:    https://github.com/epicallan/hreq.git/issues
author:         Lukwago Allan <epicallan.al@gmail>
maintainer:     Lukwago Allan <epicallan.al@gmail>
license:        MIT
license-file:   LICENSE.md
extra-doc-files: CHANGELOG.md, README.md
tested-with:    GHC==8.6.5
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/epicallan/hreq.git

flag dev
  description:        Turn on development settings.
  manual:             True
  default:            False

library
  exposed-modules:
      Network.Core.Http
    , Network.Core.API
    , Network.HTTP.Hreq
  other-modules:
      Network.Core.API.Internal
    , Network.Core.API.MediaType
    , Network.Core.API.Request
    , Network.Core.API.Response
    , Network.Core.API.TypeLevel
    , Network.Core.API.Verbs
    , Network.Core.Http.BaseUrl
    , Network.Core.Http.HasHttp
    , Network.Core.Http.HasRequest
    , Network.Core.Http.HasResponse
    , Network.Core.Http.Hlist
    , Network.Core.Http.HttpError
    , Network.Core.Http.Request
    , Network.Core.Http.Response
    , Network.Core.Http.RunHttp
    , Network.HTTP.Hreq.Config
    , Network.HTTP.Hreq.Internal
  default-extensions: LambdaCase DeriveGeneric FlexibleInstances FlexibleContexts ScopedTypeVariables TypeApplications TypeOperators MultiParamTypeClasses RecordWildCards TypeApplications TypeFamilies OverloadedStrings GADTs GeneralizedNewtypeDeriving FunctionalDependencies ConstraintKinds RankNTypes PolyKinds DataKinds KindSignatures ViewPatterns UndecidableInstances
  build-depends:
      aeson
    , base
    , bytestring
    , http-api-data
    , http-client
    , http-client-tls
    , http-media
    , http-types
    , monad-control
    , mtl
    , safe-exceptions
    , singletons
    , string-conversions
    , text
  if flag(dev)
    ghc-options: -O0 -Wall -Werror
  else
    ghc-options: -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wnoncanonical-monad-instances -Wnoncanonical-monadfail-instances
  hs-source-dirs: src
  default-language: Haskell2010

executable hreq-example
  main-is: Main.hs
  hs-source-dirs: example
  ghc-options: -Wall
  default-language: Haskell2010
  default-extensions: LambdaCase DeriveGeneric FlexibleInstances FlexibleContexts ScopedTypeVariables TypeApplications TypeOperators MultiParamTypeClasses RecordWildCards TypeApplications TypeFamilies OverloadedStrings GADTs GeneralizedNewtypeDeriving FunctionalDependencies ConstraintKinds RankNTypes PolyKinds DataKinds KindSignatures ViewPatterns UndecidableInstances
  build-depends:
      base
    , hreq
    , text
    , aeson
