cabal-version: >= 2.0
name:           hreq
version:        0.0.0.1
synopsis:       A type dependent highlevel http request library inspired by servant-client.
description:    A type dependent highlevel http request library inspired by servant-client.
category:       Network, Web
homepage:       https://github.com/epicallan/hreq.git#readme
bug-reports:    https://github.com/epicallan/hreq.git/issues
author:         Lukwago Allan <epicallan.al@gmail>
maintainer:     Lukwago Allan <epicallan.al@gmail>
license:        MIT
license-file:   LICENSE.md
extra-doc-files: CHANGELOG.md, README.md
tested-with:    GHC==8.6.5
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/epicallan/hreq.git

library
  exposed-modules:
      Network.Core.Http
    , Network.Core.API
    , Network.HTTP.Hreq
  other-modules:
      Network.Core.API.Internal
    , Network.Core.API.MediaType
    , Network.Core.API.Request
    , Network.Core.API.Response
    , Network.Core.API.TypeLevel
    , Network.Core.API.Verbs
    , Network.Core.Http.BaseUrl
    , Network.Core.Http.HasHttp
    , Network.Core.Http.HasRequest
    , Network.Core.Http.HasResponse
    , Network.Core.Http.Hlist
    , Network.Core.Http.HttpError
    , Network.Core.Http.Request
    , Network.Core.Http.Response
    , Network.Core.Http.RunHttp
    , Network.HTTP.Hreq.Config
    , Network.HTTP.Hreq.Internal
  default-extensions: LambdaCase DeriveGeneric FlexibleInstances FlexibleContexts ScopedTypeVariables TypeApplications TypeOperators MultiParamTypeClasses RecordWildCards TypeApplications TypeFamilies OverloadedStrings GADTs GeneralizedNewtypeDeriving FunctionalDependencies ConstraintKinds RankNTypes PolyKinds DataKinds KindSignatures ViewPatterns UndecidableInstances StrictData
  build-depends:
      aeson
    , base
    , bytestring
    , http-api-data
    , http-client
    , http-client-tls
    , http-media
    , http-types
    , monad-control
    , mtl
    , safe-exceptions
    , singletons
    , string-conversions
    , text

  ghc-options:
    -Wall
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wcompat
    -Widentities
    -Wredundant-constraints
    -fhide-source-paths
    -freverse-errors
    -Wpartial-fields

  hs-source-dirs: src
  default-language: Haskell2010

executable hreq-example
  main-is: Main.hs
  hs-source-dirs: example
  ghc-options: -Wall
  default-language: Haskell2010
  build-depends:
      base
    , hreq
    , aeson

test-suite readme
  build-depends:
      base
    , hreq
    , aeson
  main-is:             README.lhs
  type:                exitcode-stdio-1.0
  ghc-options:         -pgmL markdown-unlit -Wall
  build-tool-depends:  markdown-unlit:markdown-unlit
  default-language:    Haskell2010
