cabal-version: >= 2.0
name:           hreq-client
version:        0.1.1.0
synopsis:       A Type dependent Highlevel HTTP client library.
description:    A Type dependent highlevel HTTP client library inspired by servant-client.
category:       Network, Web
homepage:       https://github.com/epicallan/hreq/blob/master/README.md
bug-reports:    https://github.com/epicallan/hreq.git/issues
author:         Lukwago Allan <epicallan.al@gmail>
maintainer:     Lukwago Allan <epicallan.al@gmail>
copyright:      2019 Lukwago Allan
license:        MIT
license-file:   LICENSE.md
extra-doc-files: CHANGELOG.md, README.md
tested-with:
   GHC  ==8.2.2
    ||  ==8.4.4
    ||  ==8.6.5
    ||  ==8.8.1
build-type: Custom

source-repository head
  type: git
  location: https://github.com/epicallan/hreq.git

custom-setup
 setup-depends:
   base >= 4 && <5,
   Cabal,
   cabal-doctest >= 1 && <1.1

library
  exposed-modules:
      Hreq.Client
    , Hreq.Client.Internal.Config
    , Hreq.Client.Internal.HTTP

  default-extensions: LambdaCase DeriveGeneric FlexibleInstances FlexibleContexts ScopedTypeVariables TypeApplications TypeOperators MultiParamTypeClasses RecordWildCards TypeApplications TypeFamilies OverloadedStrings GADTs GeneralizedNewtypeDeriving FunctionalDependencies ConstraintKinds RankNTypes PolyKinds DataKinds KindSignatures ViewPatterns UndecidableInstances StrictData

  build-depends:
    base                 >= 4.10.1 && < 5,
    base-compat          >= 0.10.5 && < 0.13,
    bytestring           >= 0.10.8 && < 0.11,
    containers           >= 0.5.7.1 && < 0.7,
    exceptions           >= 0.10.0 && < 0.11,
    http-client          >= 0.6.4 && < 0.7,
    http-client-tls      >= 0.3.5 && < 0.4,
    hreq-core            >= 0.1.1,
    http-media           >= 0.8.0 && < 0.9,
    http-types           >= 0.12.3 && < 0.13,
    mtl                  >= 2.2.2 && < 3.0,
    retry                >= 0.8   && < 0.9,
    time                 >= 1.6.0.1 && < 2.0,
    text                 >= 1.2.4 && < 1.3,
    stm                  >= 2.4.5.1 && < 2.6,
    unliftio-core        >= 0.1.2 && < 0.2.0,
    string-conversions   >= 0.4.0 && < 0.5

  ghc-options:
    -Wall
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wcompat
    -Widentities
    -Wredundant-constraints
    -fhide-source-paths
    -freverse-errors
    -Wpartial-fields

  hs-source-dirs: src
  default-language: Haskell2010

executable example
  main-is: Main.hs
  hs-source-dirs: example
  ghc-options: -Wall
  default-language: Haskell2010
  build-depends:
      base >= 4.10.1 && < 5
    , hreq-client
    , aeson  >= 1.4.5 && < 1.5
    , text  >= 1.2.4 && < 1.3

test-suite spec
  build-depends:
      base       >= 4.10.1 && < 5
    , aeson      >= 1.4.5  && < 1.5
    , containers >= 0.5.7.1 && < 0.7
    , http-types >= 0.12.3 && < 0.13
    , hspec      >= 2.6.0  && < 2.8
    , hreq-client
    , hreq-core
  main-is:             Spec.hs
  hs-source-dirs:      test
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall -threaded
  default-language:    Haskell2010
  default-extensions: LambdaCase DeriveGeneric FlexibleInstances FlexibleContexts ScopedTypeVariables TypeApplications TypeOperators MultiParamTypeClasses RecordWildCards TypeApplications TypeFamilies OverloadedStrings GADTs GeneralizedNewtypeDeriving FunctionalDependencies ConstraintKinds RankNTypes PolyKinds DataKinds KindSignatures ViewPatterns StrictData
  other-modules:
      Hreq.Pure.FailSpec
    , Hreq.Pure.Util
    , Hreq.Pure.SuccessSpec
    , Hreq.HttpBin.SuccessSpec

  build-tool-depends:
    hspec-discover:hspec-discover >= 2.6.0 && <2.8

test-suite doctests
  type:             exitcode-stdio-1.0
  main-is:          DocTests.hs
  build-depends:
      base       >= 4.10.1 && < 5
    , aeson      >= 1.4.5 && < 1.5
    , doctest    >=0.15 && < 0.17
    , hreq-client

  ghc-options:      -Wall -threaded
  hs-source-dirs:   test
  default-language: Haskell2010
