cabal-version: >= 2.0
name:           hreq-conduit
version:        0.1.0.0
synopsis:       Conduit streaming support for Hreq.
description:    Conduit streaming support for Hreq an HTTP client library.
category:       Network, Web, Conduit
homepage:       https://github.com/epicallan/hreq/blob/master/hreq-conduit/README.md
bug-reports:    https://github.com/epicallan/hreq.git/issues
author:         Lukwago Allan <epicallan.al@gmail>
maintainer:     Lukwago Allan <epicallan.al@gmail>
copyright:      2019 Lukwago Allan
license:        MIT
license-file:   LICENSE.md
extra-doc-files: CHANGELOG.md, README.md
tested-with:
   GHC  ==8.2.2
    ||  ==8.4.4
    ||  ==8.6.5
    ||  ==8.8.1
build-type: Custom

custom-setup
 setup-depends:
   base >= 4 && <5,
   Cabal,
   cabal-doctest >= 1 && <1.1

source-repository head
  type: git
  location: https://github.com/epicallan/hreq.git

library
  exposed-modules:
      Hreq.Conduit
    , Hreq.Conduit.Internal.HTTP
    , Hreq.Conduit.Internal.StreamBody


  default-extensions: LambdaCase DeriveGeneric FlexibleInstances FlexibleContexts ScopedTypeVariables TypeApplications TypeOperators MultiParamTypeClasses RecordWildCards TypeApplications TypeFamilies OverloadedStrings GADTs GeneralizedNewtypeDeriving FunctionalDependencies ConstraintKinds RankNTypes PolyKinds DataKinds KindSignatures ViewPatterns UndecidableInstances StrictData

  build-depends:
    base                 >= 4.10.1 && < 5,
    bytestring           >= 0.10.8 && < 0.11,
    exceptions           >= 0.10.0 && < 0.11,
    http-client          >= 0.6.4 && < 0.7,
    http-types           >= 0.12.3 && < 0.13,
    hreq-client          >= 0.1.0,
    hreq-core            >= 0.1.0,
    conduit              >=1.3.1   && <1.4,
    mtl                  >= 2.2.2 && < 3.0,
    retry                >= 0.8   && < 0.9,
    unliftio-core        >= 0.1.2 && < 0.2.0

  ghc-options:
    -Wall
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wcompat
    -Widentities
    -Wredundant-constraints
    -fhide-source-paths
    -freverse-errors
    -Wpartial-fields

  hs-source-dirs: src
  default-language: Haskell2010

test-suite spec

  build-depends:
      base               >= 4.10.1 && < 5
    , conduit            >=1.3.1   && <1.4
    , http-types         >= 0.12.3 && < 0.13
    , hspec              >= 2.6.0  && < 2.8
    , hreq-conduit
    , string-conversions >= 0.4.0 && < 0.5
    , text               >= 1.2.4 && < 1.3
  main-is:             Spec.hs
  other-modules: Hreq.HttpBin.SuccessSpec
  hs-source-dirs:      test
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall -threaded
  default-language:    Haskell2010
  default-extensions: LambdaCase DeriveGeneric FlexibleInstances FlexibleContexts ScopedTypeVariables TypeApplications TypeOperators MultiParamTypeClasses RecordWildCards TypeApplications TypeFamilies OverloadedStrings GADTs GeneralizedNewtypeDeriving FunctionalDependencies ConstraintKinds RankNTypes PolyKinds DataKinds KindSignatures ViewPatterns
  build-tool-depends:
    hspec-discover:hspec-discover >= 2.6.0 && <2.8

test-suite readme
  build-depends:
      base              >= 4.10.1 && < 5
    , conduit           >=1.3.1   && <1.4
    , bytestring        >= 0.10.8 && < 0.11
    , hreq-conduit
    , string-conversions >= 0.4.0 && < 0.5
    , text               >= 1.2.4 && < 1.3

  main-is:             README.lhs
  type:                exitcode-stdio-1.0
  ghc-options:         -pgmL markdown-unlit -threaded
  build-tool-depends:  markdown-unlit:markdown-unlit
  default-language:    Haskell2010

test-suite doctests
  type:             exitcode-stdio-1.0
  main-is:          DocTests.hs
  build-depends:
      base       >= 4.10.1 && < 5
    , aeson      >= 1.4.5 && < 1.5
    , doctest    >=0.15 && < 0.17
    , hreq-conduit

  ghc-options:      -Wall -threaded
  hs-source-dirs:   test
  default-language: Haskell2010
